# brainworkshop-pipx

./: .gitignore  README  README.md  Readme-stats.txt  pyproject.toml  requirements.txt
brainworkshop/: brainworkshop.py
